# pulsarmhd

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Doxyfile  Makefile  README.md  TESTING_PROCESS.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: free_fall.cpp  main_polytrope_tov.cpp  main_polytropic_eos.cpp  main_tov.cpp
include/: eos_calculator.hpp  eos_view.hpp  integrate_tov.hpp  magnetic_bps.hpp  non_magnetic_ideal_npe_gas.hpp  non_rotating_stellar_structure.hpp  polytropic_eos.hpp  polytropic_view.hpp  rk4.hpp  spline_view.hpp  tov_derivatives.hpp
scripts/: calculate_energy_density_bbp.py  compare_bludman_results.py  fit_magnetic_bps_bbp_eos.py  fit_sahu_basu_datta_bps_polytrope.py  mr_extractor.py  paper_mr.yaml  plot_bbp_magnetic_bps.py  plot_beta_equilibrium.py  plot_bps_bbp_eos.py  plot_data.py  plot_difference_in_masses_magnetic_field.py  plot_difference_in_masses_magnetic_field_for_one_star.py  plot_m_r_tov.py  plot_magnetic_bps_eos.py  plot_mass_radius_relations.py  plot_mass_radius_relations_overplot.py  plot_mass_vs_b_from_csv.py  plot_mr_by_b.py  plot_nonmagnetic_ideal_npe_gas_eos.py  scan_mass_vs_b_from_outputs.py  stellar_plotter.py  stellar_plotter_config.yaml
src/: eos_calculator.cpp  magnetic_bps.cpp  main.cpp  main.txt  main_magnetic_bps.txt  main_magnetic_ideal_npe_gas.txt  main_nonmagnetic_ideal_npe_gas.txt  main_tov.txt  non_magnetic_ideal_npe_gas.cpp  non_rotating_stellar_structure.cpp  polytropic_eos.cpp  rk4.cpp
tests/: eos_calculator_test.cpp  non_rotating_stellar_structure_physics_test.cpp  non_rotating_stellar_structure_test.cpp  polytropic_eos_test.cpp
tests/python/: .coverage  TESTING_PROGRESS.md  conftest.py
tests/python/unit/: test_cli_interface.py  test_config_manager.py  test_eos_data_processor.py  test_stellar_plotter.py
