[project]
name = "pulsarmhd"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
# No runtime packages unless truly needed at runtime
dependencies = [
  "pandas>=2.2.3",
  "matplotlib>=3.10.0",
  "numpy>=2.2.1",
  "scipy>=1.15.1",
  "pyyaml>=6.0.2",
]

[dependency-groups]
# tooling, linters, formatters, hooks
dev = [
  "pre-commit>=4.3.0",
]
# test stack — mirrors your previous [tool.poetry.group.test.dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-benchmark>=4.0.0",
  "pytest-mpl>=0.16.1",
  "pytest-mock>=3.11.1",
  "pytest-xdist>=3.3.1",
  "hypothesis>=6.82.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=../../scripts",
  "--cov-report=term-missing",
  "--cov-report=html:../coverage_html",
  "--cov-fail-under=20",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "performance: Performance tests",
  "visual: Visual regression tests",
  "slow: Slow running tests",
]

# Keep this section only if/when you actually package/build the Python code:
# [build-system]
# requires = ["setuptools>=68", "wheel"]
# build-backend = "setuptools.build_meta"

# uv-specific switches (optional):
[tool.uv]
# package = false  # default behavior when no build system is present
